increase z-index of navbar-extended to prevent trumbowyg toolbar from overshadowing any nav drop-downs

--- a/admin-base/materialize/custom/_navbar.scss
+++ b/admin-base/materialize/custom/_navbar.scss
@@ -6,7 +6,7 @@ nav {
 
   &.nav-extended {
     position: relative;
-    z-index: 1;
+    z-index: 101;
   }
 
   .nav-wrapper {
